--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <!-- TODO 7: Add the Contact Me and About Me page links -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Ilmir's Portfolio</h1>
     <h2>I am a Full Stack Developer</h2>
 
     <hr />
 
-    <a href="./public/movie-ranking.html">A Movie Ranking Project</a>
-    <br />
+    <h3><a href="./public/movie-ranking.html">A Movie Ranking Project</a></h3>
     <img src="./assets/images/Movie-ranking.png" alt="Best movies according Ilmir Project" height="200" />
-    <br />
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
-    <br />
+
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/Birthday-Invite.png" alt="Birthday Invite Project" height="200" />
+    
     <hr />
 
     <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
-    
+    <a href="./public/contact.html">Contact Me</a> 
 </body>
+
 </html>
